[package]
name = "gen_constants"
version = "0.1.0"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
num-bigint = "0.2.2"
num-traits = "0.2.8"
tiny-keccak = "1.5"
rustc-hex = "1.0.0"
